--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 
     <section class="main-content">
       
+      <h1>{{ page.title }}</h1>
+
       {{ content }}
 
       {% include page-footer.html %}
