--- a/css/cayman.css
+++ b/css/cayman.css
@@ -228,3 +228,14 @@ a {
 
 .site-footer-credits {
   color: #819198; }
+
+.navbar {
+    text-align: center;
+    background-color: #3e3e3e;
+    padding: 5px;
+}
+
+.navbar a {
+    padding-left: 10px;
+    padding-right: 10px;
+}
