--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="post-header-divider"></div>
+<p class="post-header-date">{{ page.date | date_to_string }}</p>
 
 {{ content }}
